objects/vlocity_cmt__AccountHold__c.object
<CustomObject>
    <description>Describes a hold to payments on an Account record.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <description>The hold is placed on account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Holds</relationshipLabel>
        <relationshipName>AccountPaymentHolds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Asset that is suspended.</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Account Holds</relationshipLabel>
        <relationshipName>AccountHolds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DunningId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the customer collections activity that is relevant to this hold.</description>
        <label>Collections Activity</label>
        <referenceTo>vlocity_cmt__Dunning__c</referenceTo>
        <relationshipLabel>Account Holds</relationshipLabel>
        <relationshipName>AccountHolds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HoldEndDate__c</fullName>
        <description>The date/time until when the hold is effective.</description>
        <label>Hold To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HoldStartDate__c</fullName>
        <description>The date/time from when the hold is effective.</description>
        <label>Hold From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HoldType__c</fullName>
        <description>Indicates the type of hold placed on the account or subscription. The hold type differentiates which business processes are restricted.</description>
        <label>Hold Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Payment</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Customer Initiated</fullName>
                </value>
                <value>
                    <fullName>Company Initiated</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Order that is suspended.</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Account Holds</relationshipLabel>
        <relationshipName>AccountHolds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReasonComments__c</fullName>
        <description>Comments further explaining the reason for the hold.</description>
        <label>Hold Reason Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Reason__c</fullName>
        <description>Captures the reason for suspension of the entity which can be asset, subscription, order or account.</description>
        <label>Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Fraud Detected</fullName>
                </value>
                <value>
                    <fullName>SIM Lost or Stolen</fullName>
                </value>
                <value>
                    <fullName>Fraud Reported</fullName>
                </value>
                <value>
                    <fullName>Out of Country</fullName>
                </value>
                <value>
                    <fullName>Billing Dispute</fullName>
                </value>
                <value>
                    <fullName>MSISDN Recycling</fullName>
                </value>
                <value>
                    <fullName>Port Out In Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Subscription that is suspended.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
        <relationshipLabel>Account Holds</relationshipLabel>
        <relationshipName>AccountHolds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Hold</label>
    <nameField>
        <label>Account Payment Hold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>